update lib versions